# stgi

./: Cargo.toml  README.md
examples/: hello_stgi.rs
src/: builder.rs  lib.rs  text.rs
src/shaders/: cursor_picking_compute.wgsl  cursor_picking_render.wgsl  cursor_picking_text_render.wgsl  render.wgsl  text_render.wgsl
